test/TestPhases/parser/valid/modulewithdoccomment.blc
import mm "mymodule"

/** A doc comment for the module */
// A line doc comment for the module
internal module 
