test/TestPhases/parser/invalid/importwithdoccomment.blc
/** An import with doc comment is not allowed */
import mm "mymodule"

module
